--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ Data/Mods/DOS2_Arena/
 Data/Mods/DivinityOrigins_1301db3d-1f54-4e98-9be5-5094030916e4/
 Data/Public/DivinityOrigins_1301db3d-1f54-4e98-9be5-5094030916e4/
 Data/Localization/
+Data/Projects/
 Data/Editor/Palettes/
 Data/Editor/Preview/
 Data/Editor/Public/
